# py

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  RFC.md  go.mod  go.work
.core/: go.yaml
bindings/action/: action.go
bindings/agent/: agent.go
bindings/api/: api.go
bindings/array/: array.go
bindings/cache/: cache.go
bindings/config/: config.go
bindings/container/: container.go
bindings/crypto/: crypto.go
bindings/data/: data.go
bindings/dns/: dns.go
bindings/echo/: echo.go
bindings/entitlement/: entitlement.go
bindings/err/: err.go
bindings/fs/: fs.go
bindings/i18n/: i18n.go
bindings/info/: info.go
bindings/json/: json.go
bindings/log/: log.go
docs/: architecture.md  development.md  gpython-readiness.md  index.md
examples/: filesystem.py  primitive_pipeline.py  signal.py
go/py/: pyproject.toml
go/py/core/: action.py  agent.py  container.py  data.py  dns.py  err.py  registry.py  store.py  ws.py
go/py/core/math/: __init__.py  kdtree.py  knn.py  signal.py
go/py/tests/: test_medium_qdrant.py  test_rfc_stub_modules.py
py/: pyproject.toml
py/core/: __init__.py  api.py  array.py  cache.py  config.py  crypto.py  data.py  entitlement.py  err.py  fs.py  i18n.py  info.py  json.py  log.py  math.py  mcp.py  medium.py  options.py  path.py  process.py  scm.py  service.py  strings.py  task.py
py/core/math/: __init__.py  _shared.py
py/tests/: test_core.py  test_medium_qdrant.py  test_rfc_stub_modules.py
runtime/: examples_test.go  gpython_disabled.go  interpreter.go  interpreter_test.go  rfc_stub_modules_test.go
(+119 files in other folders)
