[project]
name = "core"
version = "0.1.0"
description = "Python binding for Core primitives — gpython-embedded (Tier 1) or CPython-via-uv (Tier 2)"
license = { text = "EUPL-1.2" }
requires-python = ">=3.13"
authors = [
    { name = "Lethean CIC" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
