[project]
name = "core"
version = "0.2.0"
description = "Python binding for Core primitives — bootstrap Tier 1 runtime plus CPython package surface"
license = { text = "EUPL-1.2" }
requires-python = ">=3.12"
authors = [
    { name = "Lethean CIC" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
